método limpar janela e mudar o foco, alteração de nome de variável

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
         <item>Marketing</item>
         <item>Recursos Humanos</item>
         <item>Financeiro</item>
+        <item>Produção</item>
     </array>
 </resources>
